# reddit-analysis

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_reddit_module.md  app.py  entities.json  example_batch_collection.py  example_historical_collection.py  example_usage.py  mempalace.yaml  pyproject.toml  split_db.py
.claude/: settings.local.json
.streamlit/: config.toml
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx
dashboard/app/api/pipeline/run-all/: route.ts
dashboard/app/api/pipeline/run/[step_num]/: route.ts
dashboard/app/api/pipeline/status/: route.ts
dashboard/app/briefs/: page.tsx
dashboard/app/deep-dive/: page.tsx
dashboard/app/embedding-map/: page.tsx
dashboard/app/events/: page.tsx
dashboard/app/model-health/: page.tsx
dashboard/app/overview/: page.tsx
dashboard/app/pipeline/: page.tsx
dashboard/app/sentiment/: page.tsx
dashboard/app/topics/: page.tsx
dashboard/components/charts/: ConfidenceHistogram.tsx  ForecastAreaChart.tsx  SentimentDonut.tsx  SentimentLineChart.tsx  TopicBarChart.tsx  TopicGraph.tsx  TopicHeatmap.tsx  VaderAgreementBar.tsx  VolumeBarChart.tsx  chartTooltip.ts
dashboard/components/layout/: SectionHeader.tsx  Sidebar.tsx
dashboard/components/overview/: ActivityFeedStrip.tsx  CommandBar.tsx  PipelineHealthCard.tsx  SignalStreamChart.tsx  TopicExplorerPanel.tsx
dashboard/components/shared/: ChartCard.tsx  MetricCard.tsx
docs/: env-configuration.md  execution_guide.md  historical-collection.md  neon-migration.md  plan_week5_dashboard.md  prd.md  prd_v2.md  scheduling-setup.md  week1_implementation_plan.md  week2_implementation_plan.md  week3_topic_modeling_plan.md
mlruns/0/: meta.yaml
mlruns/738496927648353554/: meta.yaml
mlruns/738496927648353554/4118f7988b874683a809d670a537db9e/: meta.yaml
mlruns/738496927648353554/4118f7988b874683a809d670a537db9e/metrics/: embedding_dim  filtered_count  kept_count  record_count
mlruns/738496927648353554/4118f7988b874683a809d670a537db9e/tags/: mlflow.runName
mlruns/738496927648353554/ff7ae3648ba142f19407149da2acb835/: meta.yaml
mlruns/738496927648353554/ff7ae3648ba142f19407149da2acb835/metrics/: kept_count  negative_count  neutral_count  positive_count  total_scored
mlruns/738496927648353554/ff7ae3648ba142f19407149da2acb835/params/: db
mlruns/738496927648353554/ff7ae3648ba142f19407149da2acb835/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
models/: embeddings_index.json
notebooks/: eda_database.ipynb  reddit_api_prototype.ipynb  timeseries_validation.ipynb
plan/: PRD.md  README.md  afk-ralph.sh  progress.txt  ralph-once.sh  tasks.json
scripts/: batch_inference.py  collect-historical.py  com.reddit.analyzer.historical.plist  cron_historical_collection.sh  dev-setup.sh  generate_openapi_types.py  generate_weak_labels.py  migrate_to_neon.py  monthly_counts.py  neon_schema.sql  query_database_counts.py  query_database_detailed.py  run_analysis_jobs.py  run_enrichment.py  run_pipeline.sh  run_timeseries.py  schedule_historical_collection.py  setup_scheduler.sh  train_topic_model.py  uv-commands.md
src/: mempalace.yaml
src/analysis/: __init__.py  db.py  enrichment.py  jobs.py  models.py  ollama.py  prompts.py  queries.py
src/api/: app.py  db.py
src/api/routes/: analysis.py  dashboard.py  health.py  pipeline.py
src/dashboard/: charts.py  db.py  pipeline.py  theme.py
src/db/: connection.py
src/ml/: __init__.py  db.py  preprocessing.py  sentiment.py  timeseries.py  topics.py
src/reddit_api/: __init__.py  cli.py  client.py  collector.py  exceptions.py  historical.py  main.py  models.py  storage.py
tests/: test_analysis_db.py  test_analysis_ollama.py  test_analysis_queries.py  test_analysis_routes.py  test_api_db.py  test_api_routes.py  test_batch_collection.py  test_connection_and_health.py  test_enrichment.py  test_migrate_to_neon.py  test_preprocessing.py  test_sentiment.py  test_topics.py  test_train_topic_model_cli.py
